Fixed margins and spacing

--- a/css/tweaks.css
+++ b/css/tweaks.css
@@ -20,19 +20,13 @@
 }
 
 h3{
-    margin-top:40px;
-}
-
-h3.mb-0{
-    margin-bottom:0;
+    margin-top: 3rem;
 }
 
 div.skills-heading{
     margin-top:1em;
     margin-bottom:0 !important;
 }
-
-
 
 /* From https://codepen.io/wbeeftink/pen/dIaDH */
 
